crates/figue/tests/integration/snapshots/main__integration__err__error_number_outside_range.snap
---
source: crates/figue/tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: failed to parse "1000" as u8 at small
   ╭─[ <cli>:1:9 ]
   │
 1 │ --small 1000
   │         ──┬─  
   │           ╰─── failed to parse "1000" as u8 at small
───╯
